--- a/wiki/richteryzm/index.html
+++ b/wiki/richteryzm/index.html
@@ -6,6 +6,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Richteryzm - Fangea i inne kontynenty</title>
+    <meta property="og:title" content="Richteryzm">
+    <meta name="twitter:title" content="Richteryzm">
+    <meta name="description" content="Zbiór poglądów politycznych będący połączeniem skrajnego liberalizmu w gospodarce i tradycjonalizmu w kwestiach społeczno-obyczajowych i politycznych, a także ustrojowych. Jest on powszechnie uważany za konserwatywną odmianę anarchokapitalizmu. Richteryści opowiadają się za wprowadzeniem monarchii oraz zniesieniem demokracji.">
+    <meta property="og:description" content="Zbiór poglądów politycznych będący połączeniem skrajnego liberalizmu w gospodarce i tradycjonalizmu w kwestiach społeczno-obyczajowych i politycznych, a także ustrojowych. Jest on powszechnie uważany za konserwatywną odmianę anarchokapitalizmu. Richteryści opowiadają się za wprowadzeniem monarchii oraz zniesieniem demokracji.">
+    <meta name="twitter:description" content="Zbiór poglądów politycznych będący połączeniem skrajnego liberalizmu w gospodarce i tradycjonalizmu w kwestiach społeczno-obyczajowych i politycznych, a także ustrojowych. Jest on powszechnie uważany za konserwatywną odmianę anarchokapitalizmu. Richteryści opowiadają się za wprowadzeniem monarchii oraz zniesieniem demokracji.">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
