--- a/radio/sigma_radio/index.html
+++ b/radio/sigma_radio/index.html
@@ -20,7 +20,7 @@
     </header>
     <main class="radio-player-container">
     <div id="radio-player">
-    <img id="radio-logo" src="https://i.ibb.co/pXXWq2z/sigma-radio.png">
+    <img id="radio-logo" src="https://i.ibb.co/N2PRMdJ/sigma-radioo.png">
     <div id="radio-data">
         <div id="radio-data-text">
 
