--- a/radio/stacje_radiowe/index.html
+++ b/radio/stacje_radiowe/index.html
@@ -33,7 +33,7 @@
         <ul id="Pampersia">
             <a href="https://grumqy.github.io/fangea/radio/sigma_radio/">
                 <li>
-                    <img src="https://i.ibb.co/pXXWq2z/sigma-radio.png">
+                    <img src="https://i.ibb.co/N2PRMdJ/sigma-radioo.png">
                     <span>Sigma Radio</span>
                 </li>  
             </a>
