--- a/radio/stacje_radiowe/index.html
+++ b/radio/stacje_radiowe/index.html
@@ -24,9 +24,9 @@
     <div>Filtruj wg lokalizacji</div>
     <ul>
         <button onclick="radio_filter('all');"><li>wszystkie</li></button>
-        <button onclick="radio_filter('Pampersia');"><li><img class="icon small" src="https://i.ibb.co/VJnnkZD/image.png"> Pampersia</li></button>
-        <button onclick="radio_filter('WRN');"><li><img class="icon small" src="https://i.ibb.co/Gv9ttvP/image.png"> WRN</li></button>
-        <button onclick="radio_filter('USF');"><li><img class="icon small" src="https://i.ibb.co/9VkBtvM/image.png"> USF</li></button>
+        <button onclick="radio_filter('Pampersia');"><li>ampersia</li></button>
+        <button onclick="radio_filter('WRN');"><li>WRN</li></button>
+        <button onclick="radio_filter('USF');"><li>USF</li></button>
     </ul>
     </div>
     <div id="radio-list">
