--- a/radio/stacje_radiowe/index.html
+++ b/radio/stacje_radiowe/index.html
@@ -24,7 +24,7 @@
     <div>Filtruj wg lokalizacji</div>
     <ul>
         <button onclick="radio_filter('all');"><li>Wszystko</li></button>
-        <button onclick="radio_filter('Pampersia');"><li>ampersia</li></button>
+        <button onclick="radio_filter('Pampersia');"><li>Pampersia</li></button>
         <button onclick="radio_filter('WRN');"><li>WRN</li></button>
         <button onclick="radio_filter('USF');"><li>USF</li></button>
     </ul>
