--- a/radio/sigma_radio/index.html
+++ b/radio/sigma_radio/index.html
@@ -60,7 +60,7 @@
     </main>
     <script>
         
-        var audio = new Audio("AUDIO.mp3");
+        var audio = new Audio("https://screenapp.io/app/#/shared/724dbc48-9f93-4e87-a1e2-d5f593189fc4");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
