--- a/radio/stacje_radiowe/index.html
+++ b/radio/stacje_radiowe/index.html
@@ -43,6 +43,14 @@
         </ul>
         <ul id="USF">
         </ul>
+        <ul id="Montecydja">
+            <a href="https://grumqy.github.io/fangea/radio/mega_music/">
+                <li>
+                    <img src="https://i.ibb.co/d6rqvNT/mega-music.png">
+                    <span>Mega Music</span>
+                </li>  
+            </a>
+        </ul>
     </div>
     </main>
     <script>
