--- a/radio/stacje_radiowe/index.html
+++ b/radio/stacje_radiowe/index.html
@@ -28,6 +28,7 @@
         <button onclick="radio_filter('WRN');"><li>WRN</li></button>
         <button onclick="radio_filter('USF');"><li>USF</li></button>
         <button onclick="radio_filter('Montecydja');"><li>Montecydja</li></button>
+        <button onclick="radio_filter('Iznotia');"><li>Montecydja</li></button>
     </ul>
     </div>
     <div id="radio-list">
@@ -49,6 +50,14 @@
                 <li>
                     <img src="https://i.ibb.co/d6rqvNT/mega-music.png">
                     <span>Mega Music</span>
+                </li>  
+            </a>
+        </ul>
+        <ul id="Iznotia">
+            <a href="https://grumqy.github.io/fangea/radio/radio_pregolau_international/">
+                <li>
+                    <img src="https://i.ibb.co/5v1qTqW/radio-pregolau.png">
+                    <span>Radio Pregolau International</span>
                 </li>  
             </a>
         </ul>
