--- a/radio/stacje_radiowe/index.html
+++ b/radio/stacje_radiowe/index.html
@@ -28,7 +28,7 @@
         <button onclick="radio_filter('WRN');"><li>WRN</li></button>
         <button onclick="radio_filter('USF');"><li>USF</li></button>
         <button onclick="radio_filter('Montecydja');"><li>Montecydja</li></button>
-        <button onclick="radio_filter('Iznotia');"><li>Montecydja</li></button>
+        <button onclick="radio_filter('Iznotia');"><li>Iznotia</li></button>
     </ul>
     </div>
     <div id="radio-list">
