--- a/radio/stacje_radiowe/index.html
+++ b/radio/stacje_radiowe/index.html
@@ -40,6 +40,12 @@
                     <span>Sigma Radio</span>
                 </li>  
             </a>
+            <a href="https://grumqy.github.io/fangea/radio/music_pop/">
+                <li>
+                    <img src="https://i.ibb.co/tMdvKpQ/musiccpop.png">
+                    <span>Music Pop</span>
+                </li>  
+            </a>
         </ul>
         <ul id="WRN">
         </ul>
