--- a/radio/boomer_hits/index.html
+++ b/radio/boomer_hits/index.html
@@ -21,13 +21,13 @@
     </header>
     <main class="radio-player-container">
     <div id="radio-player">
-    <img id="radio-logo" src="https://i.ibb.co/N2PRMdJ/sigma-radioo.png">
+    <img id="radio-logo" src="https://i.ibb.co/ncGF0Hb/boomer-hits.png">
     <div id="radio-data">
         <div id="radio-data-text">
 
             <h1>Boomer Hits</h1>
             <ul>
-                <li>Electro</li>
+                <li>Pop</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
         </div>
