--- a/radio/stacje_radiowe/index.html
+++ b/radio/stacje_radiowe/index.html
@@ -46,6 +46,12 @@
                     <span>Music Pop</span>
                 </li>  
             </a>
+            <a href="https://grumqy.github.io/fangea/radio/boomer_hits/">
+                <li>
+                    <img src="https://i.ibb.co/ncGF0Hb/boomer-hits.png">
+                    <span>Boomer Hits</span>
+                </li>  
+            </a>
         </ul>
         <ul id="WRN">
         </ul>
