--- a/radio/stacje_radiowe/index.html
+++ b/radio/stacje_radiowe/index.html
@@ -25,10 +25,11 @@
     <ul>
         <button onclick="radio_filter('all');"><li>Wszystko</li></button>
         <button onclick="radio_filter('Pampersia');"><li>Pampersia</li></button>
-        <button onclick="radio_filter('WRN');"><li>WRN</li></button>
-        <button onclick="radio_filter('USF');"><li>USF</li></button>
+        <button onclick="radio_filter('Nadmorze');"><li>Nadmorze</li></button>
+        <button onclick="radio_filter('Sudfangea');"><li>Sudfangea</li></button>
         <button onclick="radio_filter('Montecydja');"><li>Montecydja</li></button>
         <button onclick="radio_filter('Iznotia');"><li>Iznotia</li></button>
+        <button onclick="radio_filter('Pieczaria');"><li>Pieczaria</li></button>
     </ul>
     </div>
     <div id="radio-list">
