--- a/radio/mega_music/index.html
+++ b/radio/mega_music/index.html
@@ -27,9 +27,9 @@
 
             <h1>Mega Music</h1>
             <ul>
-                <li>Pop</li>
+                <li>Phonk</li>
             </ul>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
+            <span>- Mei Rosetta carrying air conditioning<br>- Kacmer Street and another full track<br>- Wormblatt</span>
         </div>
         <div id="radio-player-settings">
             <button onclick="toggleAudio()" id="toggle-button" class="play">
@@ -60,7 +60,7 @@
     </main>
     <script>
         
-        var audio = new Audio("AUDIO");
+        var audio = new Audio("https://s3.us-west-2.amazonaws.com/store.screenapp.io-production/vid/66532204f52cfa20c7eee4cd/ef196ed0-1b5b-11ef-accc-bdbd86760d50.mp3?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIASBMTALOAOP6V2K42%2F20240526%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20240526T125916Z&X-Amz-Expires=14400&X-Amz-Signature=246f9caf749ca7245e71719fa0518a6fc1546ac304915042cda3c5f534c65f92&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3D%22file.mp3%22%3B%20filename%2A%3D%20UTF-8%27%27megamusic.mp3%3B");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
