--- a/radio/mega_music/index.html
+++ b/radio/mega_music/index.html
@@ -29,7 +29,7 @@
             <ul>
                 <li>Phonk</li>
             </ul>
-            <span>- Mei Rosetta carrying air conditioning<br>- Kacmer Street and another full track<br>- Wormblatt</span>
+            <span>- Shadxwbxrn - Anthem<br>- Call Me Sleeper - Dope<br>- Nueki x Tolchonov x glichery - Tired of Problems</span>
         </div>
         <div id="radio-player-settings">
             <button onclick="toggleAudio()" id="toggle-button" class="play">
