--- a/radio/music_pop/index.html
+++ b/radio/music_pop/index.html
@@ -29,7 +29,7 @@
             <ul>
                 <li>Pop</li>
             </ul>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
+            <span>- Fatamarse - Bump to the Music<br>- Paul Engemann - Push it to the limit<br>- April's in Paris - Feels Like I Just Can't Take No More</span>
         </div>
         <div id="radio-player-settings">
             <button onclick="toggleAudio()" id="toggle-button" class="play">
