--- a/radio/radio_pregolau_international/index.html
+++ b/radio/radio_pregolau_international/index.html
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
 
-            <h1>Radio Pregolau International</h1>
+            <h1>Radio Pregolau Int...</h1>
             <ul>
                 <li>Pop</li>
                 <li>Electro</li>
