--- a/radio/sigma_radio/index.html
+++ b/radio/sigma_radio/index.html
@@ -29,7 +29,7 @@
             <ul>
                 <li>Electro</li>
             </ul>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
+            <span>- Mascarpone - Suicide<br> - Gress - VLST<br> - Seekae - Test & Recognise</span>
         </div>
         <div id="radio-player-settings">
             <button onclick="toggleAudio()" id="toggle-button" class="play">
