--- a/radio/willington_non_stop_rock/index.html
+++ b/radio/willington_non_stop_rock/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sigma Radio - Fangea i inne kontynenty</title>
+    <title>Willington Non-Stop Rock - Fangea i inne kontynenty</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -21,13 +21,13 @@
     </header>
     <main class="radio-player-container">
     <div id="radio-player">
-    <img id="radio-logo" src="https://i.ibb.co/N2PRMdJ/sigma-radioo.png">
+    <img id="radio-logo" src="https://i.ibb.co/fXg1RZP/image.png">
     <div id="radio-data">
         <div id="radio-data-text">
 
-            <h1>Sigma Radio</h1>
+            <h1>Willington Non-St..</h1>
             <ul>
-                <li>Electro</li>
+                <li>Rock</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
         </div>
