--- a/radio/stacje_radiowe/index.html
+++ b/radio/stacje_radiowe/index.html
@@ -77,6 +77,12 @@
                     <span>Mega Music</span>
                 </li>  
             </a>
+            <a href="https://grumqy.github.io/fangea/radio/pop_24/">
+                <li>
+                    <img src="https://i.ibb.co/Jrrk1Dr/pop24.png">
+                    <span>Pop 24</span>
+                </li>  
+            </a>
         </ul>
         <ul id="Iznotia">
             <a href="https://grumqy.github.io/fangea/radio/radio_pregolau_international/">
