--- a/radio/pieczar_radio/index.html
+++ b/radio/pieczar_radio/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sigma Radio - Fangea i inne kontynenty</title>
+    <title>Pieczar Radio - Fangea i inne kontynenty</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -21,13 +21,13 @@
     </header>
     <main class="radio-player-container">
     <div id="radio-player">
-    <img id="radio-logo" src="https://i.ibb.co/N2PRMdJ/sigma-radioo.png">
+    <img id="radio-logo" src="https://i.ibb.co/mJqCmL1/pieczar-radio.png">
     <div id="radio-data">
         <div id="radio-data-text">
 
-            <h1>Sigma Radio</h1>
+            <h1>Pieczar Radio</h1>
             <ul>
-                <li>Electro</li>
+                <li>Sraczucha</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
         </div>
@@ -60,7 +60,7 @@
     </main>
     <script>
         
-        var audio = new Audio("https://s3.us-west-2.amazonaws.com/store.screenapp.io-production/vid/66531448f52cfa20c7ee8743/68f1a280-1b4e-11ef-95f1-1945e8507e94.mp3?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIASBMTALOAOP6V2K42%2F20240526%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20240526T110759Z&X-Amz-Expires=14400&X-Amz-Signature=16c486e807aafd59f93893b7dc625f21d576ed203ef67b58462c20d271f87ffa&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3D%22file.mp3%22%3B%20filename%2A%3D%20UTF-8%27%27NO%2520EMOTIONS%2520%25232%2520_%25201%2520HOUR%2520ELECTRONIC%2520MUSIC%2520%255BDark%2520Techno%252C%2520MidTempo%252C%2520Witch%255D_jEUz8rKJclU%2520%281%29.mp3%3B");
+        var audio = new Audio("https://s3.us-west-2.amazonaws.com/store.screenapp.io-production/vid/66535fa0f52cfa20c7ef8b5c/fc021650-1b7a-11ef-88d9-6d962567431d.mp4?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIASBMTALOAOP6V2K42%2F20240526%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20240526T161622Z&X-Amz-Expires=604800&X-Amz-Signature=e752b235a809730cf90eba31ef148db05f188e9b0fcd27927cd20a7a8667a784&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3D%22file.mp4%22%3B%20filename*%3D%20UTF-8%27%27ARTYLERIJA%20%E2%80%90%20Wykonano%20za%20pomoc%C4%85%20Clipchamp.mp4%3B");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
