--- a/radio/mega_music/index.html
+++ b/radio/mega_music/index.html
@@ -60,7 +60,7 @@
     </main>
     <script>
         
-        var audio = new Audio("https://s3.us-west-2.amazonaws.com/store.screenapp.io-production/vid/66532204f52cfa20c7eee4cd/ef196ed0-1b5b-11ef-accc-bdbd86760d50.mp3?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIASBMTALOAOP6V2K42%2F20240526%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20240526T125916Z&X-Amz-Expires=14400&X-Amz-Signature=246f9caf749ca7245e71719fa0518a6fc1546ac304915042cda3c5f534c65f92&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3D%22file.mp3%22%3B%20filename%2A%3D%20UTF-8%27%27megamusic.mp3%3B");
+        var audio = new Audio("https://www.googleapis.com/drive/v3/files/1pS4bCrh5hPEhXIZINhBm4iikxo89NFaK?alt=media&key=AIzaSyCbfLsPxDax4v_XY5AnZ30Ivk7Pv3Z6dU0");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
