--- a/radio/pop_24/index.html
+++ b/radio/pop_24/index.html
@@ -60,7 +60,7 @@
     </main>
     <script>
         
-        var audio = new Audio("https://s3.us-west-2.amazonaws.com/store.screenapp.io-production/vid/66532204f52cfa20c7eee4cd/033d9480-1b6c-11ef-8a82-e13539cf8a6a.webm?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIASBMTALOAOP6V2K42%2F20240526%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20240526T142838Z&X-Amz-Expires=604800&X-Amz-Signature=52cd713296ceec2807ddf7c7c044745f961899ea3580ec09217c127af41cd564&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3D%22file.mp4%22%3B%20filename*%3D%20UTF-8%27%27pop24.mp4%3B");
+        var audio = new Audio("https://www.googleapis.com/drive/v3/files/1ErfA_Tst9e2n6skkl_ff77yap7j5g-Hu?alt=media&key=AIzaSyCbfLsPxDax4v_XY5AnZ30Ivk7Pv3Z6dU0");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
