--- a/radio/sigma_radio/index.html
+++ b/radio/sigma_radio/index.html
@@ -60,7 +60,7 @@
     </main>
     <script>
         
-        var audio = new Audio("https://s3.us-west-2.amazonaws.com/store.screenapp.io-production/vid/66531448f52cfa20c7ee8743/68f1a280-1b4e-11ef-95f1-1945e8507e94.mp3?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIASBMTALOAOP6V2K42%2F20240526%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20240526T110759Z&X-Amz-Expires=14400&X-Amz-Signature=16c486e807aafd59f93893b7dc625f21d576ed203ef67b58462c20d271f87ffa&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3D%22file.mp3%22%3B%20filename%2A%3D%20UTF-8%27%27NO%2520EMOTIONS%2520%25232%2520_%25201%2520HOUR%2520ELECTRONIC%2520MUSIC%2520%255BDark%2520Techno%252C%2520MidTempo%252C%2520Witch%255D_jEUz8rKJclU%2520%281%29.mp3%3B");
+        var audio = new Audio("https://www.googleapis.com/drive/v3/files/1YGA6b-CKEBDbab4NZJee0C0vjWfhoOAu?alt=media&key=AIzaSyCbfLsPxDax4v_XY5AnZ30Ivk7Pv3Z6dU0");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
