--- a/radio/stacje_radiowe/index.html
+++ b/radio/stacje_radiowe/index.html
@@ -56,7 +56,13 @@
             <a href="https://grumqy.github.io/fangea/radio/downtown_fm/">
                 <li>
                     <img src="https://i.ibb.co/H4nw565/down-town.png">
-                    <span>Downtown Fm</span>
+                    <span>Downtown FM</span>
+                </li>  
+            </a>
+            <a href="https://grumqy.github.io/fangea/radio/metal_radio/">
+                <li>
+                    <img src="https://i.ibb.co/Dw6yB0d/metal-radioo.png">
+                    <span>Metal Radio</span>
                 </li>  
             </a>
         </ul>
