--- a/radio/radio_pregolau_international/index.html
+++ b/radio/radio_pregolau_international/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     </div>
-    <a href="https://grumqy.github.io/fangea/radio/stacje_radiowe/">
+    <a href="https://grumqy.github.io/fangea/radio/">
         <button class="button">
         <svg class="svgIcon" viewBox="0 0 384 512">
           <path
