--- a/radio/boomer_hits/index.html
+++ b/radio/boomer_hits/index.html
@@ -28,6 +28,7 @@
             <h1>Boomer Hits</h1>
             <ul>
                 <li>Pop</li>
+                <li>Język Polski</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
         </div>
