--- a/radio/mega_music/index.html
+++ b/radio/mega_music/index.html
@@ -28,6 +28,7 @@
             <h1>Mega Music</h1>
             <ul>
                 <li>Phonk</li>
+                <li>Język Polski</li>
             </ul>
             <span>- Shadxwbxrn - Anthem<br>- Call Me Sleeper - Dope<br>- Nueki x Tolchonov x glichery - Tired of Problems</span>
         </div>
