--- a/radio/metal_radio/index.html
+++ b/radio/metal_radio/index.html
@@ -28,6 +28,7 @@
             <h1>Metal Radio</h1>
             <ul>
                 <li>Metal</li>
+                <li>Język Polski</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
         </div>
