--- a/radio/music_pop/index.html
+++ b/radio/music_pop/index.html
@@ -28,6 +28,7 @@
             <h1>Music Pop</h1>
             <ul>
                 <li>Pop</li>
+                <li>Język Polski</li>
             </ul>
             <span>- Fatamarse - Bump to the Music<br>- Paul Engemann - Push it to the limit<br>- April's in Paris - Feels Like I Just Can't Take No More</span>
         </div>
