--- a/radio/pop_24/index.html
+++ b/radio/pop_24/index.html
@@ -28,6 +28,7 @@
             <h1>Pop 24</h1>
             <ul>
                 <li>Pop</li>
+                <li>Język Niemiecki</li>
             </ul>
             <span>- Lil Kleine - Alleen<br>- Mark Forster - Chöre<br>- Adel Tawil - Lieder</span>
         </div>
