--- a/radio/radio_pregolau_international/index.html
+++ b/radio/radio_pregolau_international/index.html
@@ -30,6 +30,7 @@
                 <li>Pop</li>
                 <li>Electro</li>
                 <li>Rock</li>
+                <li>Język Niemiecki</li>
             </ul>
             <span>- NENA - Irgendwie  Irgendwo Irgendwann<br>- Peter Schilling - Major Tom<br> - IFA Wartburg - The free German youth</span>
         </div>
