--- a/radio/sigma_radio/index.html
+++ b/radio/sigma_radio/index.html
@@ -28,6 +28,7 @@
             <h1>Sigma Radio</h1>
             <ul>
                 <li>Electro</li>
+                <li>Język Polski</li>
             </ul>
             <span>- Mascarpone - Suicide<br> - Gress - VLST<br> - Seekae - Test & Recognise</span>
         </div>
