--- a/radio/willington_non_stop_rock/index.html
+++ b/radio/willington_non_stop_rock/index.html
@@ -28,6 +28,7 @@
             <h1>Willington Non-St..</h1>
             <ul>
                 <li>Rock</li>
+                <li>Język Angielski</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
         </div>
