--- a/radio/downtown_fm/index.html
+++ b/radio/downtown_fm/index.html
@@ -21,7 +21,7 @@
     </header>
     <main class="radio-player-container">
     <div id="radio-player">
-    <img id="radio-logo" src="https://i.ibb.co/H4nw565/down-town.png">
+    <img id="radio-logo" src="https://i.ibb.co/ZzTCvXH/downntown.png">
     <div id="radio-data">
         <div id="radio-data-text">
 
