--- a/radio/index.html
+++ b/radio/index.html
@@ -55,7 +55,7 @@
             </a>
             <a href="https://grumqy.github.io/fangea/radio/downtown_fm/">
                 <li>
-                    <img src="https://i.ibb.co/H4nw565/down-town.png">
+                    <img src="https://i.ibb.co/ZzTCvXH/downntown.png">
                     <span>Downtown FM</span>
                 </li>  
             </a>
