--- a/radio/index.html
+++ b/radio/index.html
@@ -35,6 +35,12 @@
     <div id="radio-list">
         <h1 id="radio-list-heading">Wszystkie stacje radiowe</h1>
         <ul id="Pampersia">
+            <a href="https://grumqy.github.io/fangea/radio/radio_republika/">
+                <li>
+                    <img src="https://i.ibb.co/KNT8xY0/tvradio.png">
+                    <span>Radio Republika</span>
+                </li>  
+            </a>
             <a href="https://grumqy.github.io/fangea/radio/sigma_radio/">
                 <li>
                     <img src="https://i.ibb.co/N2PRMdJ/sigma-radioo.png">
