--- a/radio/wild_west_radio/index.html
+++ b/radio/wild_west_radio/index.html
@@ -21,16 +21,18 @@
     </header>
     <main class="radio-player-container">
     <div id="radio-player">
-    <img id="radio-logo" src="https://i.ibb.co/N2PRMdJ/sigma-radioo.png">
+    <img id="radio-logo" src="https://i.ibb.co/55Y2NLy/wildwestradio.png">
     <div id="radio-data">
         <div id="radio-data-text">
 
             <h1>Sigma Radio</h1>
             <ul>
-                <li>Electro</li>
-                <li>Język Polski</li>
+                <li>R&B</li>
+                <li>Swing</li>
+                <li>Country</li>
+                <li>Język Angielski</li>
             </ul>
-            <span>- Mascarpone - Suicide<br> - Gress - VLST<br> - Seekae - Test & Recognise</span>
+            <span>- Kay Kyser - Jingle Jangle Jingle<br>- Bob Wills - San Antonio Rose<br>- Bing Crosby And The Andrew Sisters - Pistol Packin' Mama</span>
         </div>
         <div id="radio-player-settings">
             <button onclick="toggleAudio()" id="toggle-button" class="play">
@@ -61,7 +63,7 @@
     </main>
     <script>
         
-        var audio = new Audio("https://www.googleapis.com/drive/v3/files/1YGA6b-CKEBDbab4NZJee0C0vjWfhoOAu?alt=media&key=AIzaSyCbfLsPxDax4v_XY5AnZ30Ivk7Pv3Z6dU0");
+        var audio = new Audio("https://www.googleapis.com/drive/v3/files/1aWL6bjWTPTVEnhGPY7fUhP1MCWZXBhpv?alt=media&key=AIzaSyD76lmULeKKVQ3IcgTOTrozZzjnIaeRe00");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
