--- a/radio/wild_west_radio/index.html
+++ b/radio/wild_west_radio/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sigma Radio - Fangea i inne kontynenty</title>
+    <title>Wild West Radio - Fangea i inne kontynenty</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -25,7 +25,7 @@
     <div id="radio-data">
         <div id="radio-data-text">
 
-            <h1>Sigma Radio</h1>
+            <h1>Wild West Radio</h1>
             <ul>
                 <li>R&B</li>
                 <li>Swing</li>
