--- a/radio/wild_west_radio/index.html
+++ b/radio/wild_west_radio/index.html
@@ -32,7 +32,7 @@
                 <li>Country</li>
                 <li>Język Angielski</li>
             </ul>
-            <span>- Kay Kyser - Jingle Jangle Jingle<br>- Bob Wills - San Antonio Rose<br>- Bing Crosby And The Andrew Sisters - Pistol Packin' Mama</span>
+            <span>- Kay Kyser - Jingle Jangle Jingle<br>- Bob Wills - San Antonio Rose<br>- Bing Crosby & The Andrew Sisters - Pistol Packin' Mama</span>
         </div>
         <div id="radio-player-settings">
             <button onclick="toggleAudio()" id="toggle-button" class="play">
