--- a/radio/index.html
+++ b/radio/index.html
@@ -75,6 +75,12 @@
         <ul id="Nadmorze">
         </ul>
         <ul id="Sudfangea">
+            <a href="https://grumqy.github.io/fangea/radio/wild_west_radio/">
+                <li>
+                    <img src="https://i.ibb.co/55Y2NLy/wildwestradio.png">
+                    <span>Wild West Radio</span>
+                </li>  
+            </a>
             <a href="https://grumqy.github.io/fangea/radio/willington_non_stop_rock/">
                 <li>
                     <img src="https://i.ibb.co/fXg1RZP/image.png">
