--- a/radio/index.html
+++ b/radio/index.html
@@ -73,6 +73,12 @@
             </a>
         </ul>
         <ul id="Nadmorze">
+            <a href="https://grumqy.github.io/fangea/radio/みどり_FM/">
+                <li>
+                    <img src="https://i.ibb.co/db8fWq5/radio-makronezja.png">
+                    <span>みどりFM</span>
+                </li>  
+            </a>
         </ul>
         <ul id="Sudfangea">
             <a href="https://grumqy.github.io/fangea/radio/wild_west_radio/">
