--- a/radio/index.html
+++ b/radio/index.html
@@ -73,7 +73,7 @@
             </a>
         </ul>
         <ul id="Nadmorze">
-            <a href="https://grumqy.github.io/fangea/radio/みどり_FM/">
+            <a href="https://grumqy.github.io/fangea/radio/みどり_fm/">
                 <li>
                     <img src="https://i.ibb.co/db8fWq5/radio-makronezja.png">
                     <span>みどりFM</span>
