--- a/radio/みどり_fm/index.html
+++ b/radio/みどり_fm/index.html
@@ -27,7 +27,7 @@
 
             <h1>みどりFM</h1>
             <ul>
-                <li>Lo-fi</li>
+                <li>City Pop</li>
                 <li>Język Japoński</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
