--- a/radio/downtown_fm/index.html
+++ b/radio/downtown_fm/index.html
@@ -27,7 +27,8 @@
 
             <h1>Downtown FM</h1>
             <ul>
-                <li>Hip-Hop/R'n'B</li>
+                <li>Hip-Hop</li>
+                <li>R&B</li>
                 <li>Język Polski</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
