--- a/radio/radio_republika/index.html
+++ b/radio/radio_republika/index.html
@@ -27,7 +27,8 @@
 
             <h1>Radio Republika</h1>
             <ul>
-                <li>Pop</li>
+                <li>Muzyka Klasyczna</li>
+                <li>Muzyka Filmowa</li>
                 <li>Język Polski</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
