--- a/radio/index.html
+++ b/radio/index.html
@@ -73,6 +73,12 @@
             </a>
         </ul>
         <ul id="Nadmorze">
+            <a href="https://grumqy.github.io/fangea/radio/rn_radio/">
+                <li>
+                    <img src="https://i.ibb.co/rbWQsBG/rnradio.png">
+                    <span>RN Radio</span>
+                </li>  
+            </a>
             <a href="https://grumqy.github.io/fangea/radio/みどり_fm/">
                 <li>
                     <img src="https://i.ibb.co/db8fWq5/radio-makronezja.png">
