--- a/radio/index.html
+++ b/radio/index.html
@@ -79,6 +79,12 @@
                     <span>RN Radio</span>
                 </li>  
             </a>
+            <a href="https://grumqy.github.io/fangea/radio/ラジオ禅/">
+                <li>
+                    <img src="https://i.ibb.co/GJrfGfs/radio-zen.png">
+                    <span>ラジオ禅</span>
+                </li>  
+            </a>
             <a href="https://grumqy.github.io/fangea/radio/みどり_fm/">
                 <li>
                     <img src="https://i.ibb.co/db8fWq5/radio-makronezja.png">
