--- a/radio/ラジオ禅/index.html
+++ b/radio/ラジオ禅/index.html
@@ -61,7 +61,7 @@
     </main>
     <script>
         
-        var audio = new Audio("AUDIO");
+        var audio = new Audio("https://www.googleapis.com/drive/v3/files/1yZuOlR4XsLKiX9kfS3E9tP2BD8-osO-I?alt=media&key=AIzaSyD76lmULeKKVQ3IcgTOTrozZzjnIaeRe00");
         var toggleButton = document.getElementById("toggle-button");
         var initialVolume = 0.5;
         var audioInitialized = false;
