--- a/radio/boomer_hits/index.html
+++ b/radio/boomer_hits/index.html
@@ -24,8 +24,9 @@
     <img id="radio-logo" src="https://i.ibb.co/ncGF0Hb/boomer-hits.png">
     <div id="radio-data">
         <div id="radio-data-text">
-
-            <h1>Boomer Hits</h1>
+            <div id="radio-name-container">
+                <h1>Boomer Hits</h1>
+            </div>
             <ul>
                 <li>Pop</li>
                 <li>Język Polski</li>
