--- a/radio/wild_west_radio/index.html
+++ b/radio/wild_west_radio/index.html
@@ -24,8 +24,9 @@
     <img id="radio-logo" src="https://i.ibb.co/55Y2NLy/wildwestradio.png">
     <div id="radio-data">
         <div id="radio-data-text">
-
-            <h1>Wild West Radio</h1>
+            <div id="radio-name-container">
+                <h1>Wild West Radio</h1>
+            </div>
             <ul>
                 <li>R&B</li>
                 <li>Swing</li>
@@ -62,6 +63,11 @@
       </a>
     </main>
     <script>
+
+        let radio_station_name = document.querySelector(".radio-player-container #radio-player #radio-data #radio-data-text h1").innerHTML;
+        radio_station_name = `${radio_station_name} ${radio_station_name} ${radio_station_name} ${radio_station_name} ${radio_station_name} ${radio_station_name}`;
+        document.querySelector(".radio-player-container #radio-player #radio-data #radio-data-text h1").innerHTML = radio_station_name;
+        console.log(radio_station_name);
         
         var audio = new Audio("https://www.googleapis.com/drive/v3/files/1aWL6bjWTPTVEnhGPY7fUhP1MCWZXBhpv?alt=media&key=AIzaSyD76lmULeKKVQ3IcgTOTrozZzjnIaeRe00");
         var toggleButton = document.getElementById("toggle-button");
